--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +16,16 @@
     "axios": "^1.13.5",
     "better-sqlite3": "^12.6.2",
     "dotenv": "^17.2.4",
+    "ejs": "^4.0.1",
     "jsdom": "^28.0.0",
     "node-cron": "^4.2.1",
+    "p-limit": "^7.3.0",
     "rss-parser": "^3.13.0",
     "shelljs": "^0.10.0",
-    "string-similarity": "^4.0.4"
+    "string-similarity": "^4.0.4",
+    "winston": "^3.19.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
