--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "news",
-  "version": "4.0.2",
+  "version": "4.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "npx jest",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
