--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0"
   }
 }
