--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "news",
-  "version": "4.2.0",
+  "version": "4.3.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "node-cron": "^4.2.1",
     "p-limit": "^7.3.0",
     "rss-parser": "^3.13.0",
+    "segment": "^0.1.3",
     "shelljs": "^0.10.0",
     "string-similarity": "^4.0.4",
     "winston": "^3.19.0"
